--- a/Frontend/my-app/src/Components/SearchBar.css
+++ b/Frontend/my-app/src/Components/SearchBar.css
@@ -12,7 +12,7 @@ body{
 }
 
 .searchInput {
-  width: 100%;
+  width: 310%;
   border: 3px solid #00B4CC;
   border-right: none;
   padding: 5px;
@@ -37,6 +37,9 @@ body{
   cursor: pointer;
   font-size: 20px;
   position: fixed;
+  top: 0px;
+  right: 40px;
+ 
 }
 
 .search-icon{
@@ -48,12 +51,21 @@ body{
   right: -20px;
 }
 
+.products{
+  position: fixed;
+  float: right;
+  width: 75px;
+  height: 75px;
+  top: 80px;
+ 
+
+}
 
 /*Resize the wrap to see the search bar change!*/
 .wrap{
   width: 30%;
   position: absolute;
-  top: 50%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
