--- a/Frontend/my-app/src/Components/SearchBar.css
+++ b/Frontend/my-app/src/Components/SearchBar.css
@@ -12,7 +12,7 @@ body{
 }
 
 .searchInput {
-  width: 310%;
+  width: 275%;
   border: 3px solid #00B4CC;
   border-right: none;
   padding: 5px;
@@ -36,7 +36,7 @@ body{
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   font-size: 20px;
-  position: fixed;
+  position:absolute;
   top: 0px;
   right: 40px;
  
