--- a/WebApp/src/main/resources/templates/register.html
+++ b/WebApp/src/main/resources/templates/register.html
@@ -38,7 +38,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand"  href="#">Exchange Manager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
