--- a/WebApp/src/main/resources/templates/tokens.html
+++ b/WebApp/src/main/resources/templates/tokens.html
@@ -38,7 +38,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand"  href="#">Exchange Manager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -78,6 +78,7 @@
                             </tr>
                         </thead>
                         <tbody>
+
                             <tr th:if="${tokens.empty}">
                                 <td colspan="2"> No tokens Available </td>
                             </tr>
@@ -85,6 +86,8 @@
                                 <td><span th:text="${token.code}"></span></td>
                                 <td><span th:text="${token.status}"></span></td>
                             </tr>
+
+
                         </tbody>
                     </table>
                 </div>
