--- a/Api/WebApp/src/main/resources/templates/home.html
+++ b/Api/WebApp/src/main/resources/templates/home.html
@@ -60,8 +60,9 @@
 
     <h1>home</h1>
 
-
-
+    <div class="d-grid gap-2">
+        <button class="btn btn-primary" type="button">Button</button>
+    </div>
 
 </body>
 </html>
