--- a/Example App/Frontend/my-app/src/Components/NavBar.css
+++ b/Example App/Frontend/my-app/src/Components/NavBar.css
@@ -74,11 +74,11 @@ body {
     line-height: 42px;
     padding: 0;
     border: none;
-    position: fixed;
+    position: absolute;
     float: right;
     width: 120px;
     height: 40px;
-    top: 1%;
+    top: 25%;
     right: 200px;
   }
   .LoginButton:before {
