--- a/Example App/Frontend/my-app/src/Components/SellerProductsInfoModal.css
+++ b/Example App/Frontend/my-app/src/Components/SellerProductsInfoModal.css
@@ -1,5 +1,5 @@
 .ModalBackground6 {
-    position: fixed; /* Stay in place */
+    position: absolute; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
