--- a/Example App/Frontend/my-app/src/pages/UserProfile.css
+++ b/Example App/Frontend/my-app/src/pages/UserProfile.css
@@ -15,7 +15,7 @@
   background: transparent;
   cursor: pointer;
   transition: all 0.3s ease;
-  position: fixed;
+  position: absolute;
   display: inline-block;
    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
    7px 7px 20px 0px rgba(0,0,0,.1),
@@ -45,6 +45,32 @@
   width: 2px;
 }
 .UserInfoButton:hover {
+  box-shadow:  
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
+}
+
+
+.BeaSeller {
+  background: rgb(0,172,238);
+  background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  width: 130px;
+  height: 40px;
+  line-height: 42px;
+  padding: 0;
+  border: none;
+  position: fixed;
+  float: right;
+  width: 120px;
+  height: 40px;
+  top: 1%;
+  right: 400px;
+}
+.BeaSeller:before {
+  height: 0%;
+  width: 2px;
+}
+.BeaSeller:hover {
   box-shadow:  
     inset -4px -4px 6px 0 rgba(255,255,255,.2),
     inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
