--- a/Example App/Frontend/my-app/src/Components/RefundRequestModal.css
+++ b/Example App/Frontend/my-app/src/Components/RefundRequestModal.css
@@ -19,3 +19,11 @@
     width: 80%;
   }
 
+  .InputRefundReq {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+
