--- a/Example App/Frontend/my-app/src/pages/SellerProducts.css
+++ b/Example App/Frontend/my-app/src/pages/SellerProducts.css
@@ -31,7 +31,7 @@
   line-height: 42px;
   padding: 0;
   border: none;
-  position: fixed;
+  position: absolute;
   float: right;
   width: 120px;
   height: 40px;
