--- a/Api/WebApp/src/main/resources/templates/home.html
+++ b/Api/WebApp/src/main/resources/templates/home.html
@@ -32,6 +32,12 @@
         td{
             color: white;
         }
+        h1{
+            color: white;
+        }
+        h2{
+            color: white;
+        }
 
     </style>
 
@@ -58,11 +64,11 @@
         </div>
     </nav>
 
-    <h1>home</h1>
 
-    <div class="d-grid gap-2">
-        <button class="btn btn-primary" type="button">Button</button>
-    </div>
+
+    <h1>Exchange Manager. Safely trade online!</h1>
+    <p></p>
+    <h2>Register <a href = "/register">here</a> , or if you are already registered, login <a href = "/login">here</a></h2>
 
 </body>
 </html>
