--- a/Api/WebApp/src/main/resources/templates/tokens.html
+++ b/Api/WebApp/src/main/resources/templates/tokens.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -64,7 +64,9 @@
 
             <div class="row">
                 <div class="col-sm-6 text-right">
-                    <button type="button" class="btn btn-dark"> + New Token</button>
+                    <form action="/tokens"></form>
+                        <input type="submit" class="btn btn-dark" onclick="location.href='/tokens' " value="New Token" > </input>
+                    </form>
                 </div>
             </div>
             <div class="row" >
