minor bug fix with new token button

--- a/Api/WebApp/src/main/resources/templates/tokens.html
+++ b/Api/WebApp/src/main/resources/templates/tokens.html
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="col-sm-6 text-right">
                     <form action="/tokens"></form>
-                        <input type="submit" class="btn btn-dark" onclick="location.href='/tokens' " value="New Token" > </input>
+                        <input type="submit" class="btn btn-dark" onclick="location.href='/tokens/new' " value="New Token" > </input>
                     </form>
                 </div>
             </div>
