--- a/Example App/Frontend/my-app/src/pages/SellerProfile.css
+++ b/Example App/Frontend/my-app/src/pages/SellerProfile.css
@@ -13,7 +13,7 @@
   background: transparent;
   cursor: pointer;
   transition: all 0.3s ease;
-  position: fixed;
+  position: absolute;
   display: inline-block;
    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
    7px 7px 20px 0px rgba(0,0,0,.1),
@@ -31,7 +31,7 @@
   line-height: 42px;
   padding: 0;
   border: none;
-  position: fixed;
+  position: absolute;
   float: right;
   width: 120px;
   height: 40px;
