--- a/Example App/Frontend/my-app/src/pages/UserProfile.css
+++ b/Example App/Frontend/my-app/src/pages/UserProfile.css
@@ -33,7 +33,7 @@
   line-height: 42px;
   padding: 0;
   border: none;
-  position: fixed;
+  position: absolute;
   float: right;
   width: 120px;
   height: 40px;
@@ -59,7 +59,7 @@
   line-height: 42px;
   padding: 0;
   border: none;
-  position: fixed;
+  position: absolute;
   float: right;
   width: 120px;
   height: 40px;
